--- a/q/14.html
+++ b/q/14.html
@@ -9,8 +9,11 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.">
 <meta name="theme-color" content="#32CD32">
-<meta property="og:type" content="article"/>
+<meta property="og:type" content="product"/>
 <meta property="og:release_date" content="2018-04-12 10:26:28"/>
+<meta property="og:title" content="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world."/>
+<meta property="og:description" content="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world."/>
+<meta property="og:product:price" content="{content:ext_price}"/>
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
 <script src="/q/j.min.js"></script>
@@ -43,7 +46,14 @@
 
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h1 class="margin-bottom weight" align="center">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</h1>
-   <ul class="bread">
+  <p align="center"></p>
+    <p align="center"><span class="text-danger size-large">&#9733;</span>
+    <span class="text-danger size-large">&#9733;</span>
+    <span class="text-danger size-large">&#9733;</span>
+    <span class="text-danger size-large">&#9733;</span>
+    <span class="text-danger size-large">&#9733;</span></p>
+  
+  <ul class="bread">
      <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/video/">Video</a> <i class="icon-arrow-right"></i> <a href="/q/14.html">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -51,20 +61,22 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/other/20240626/1719389747296309.webp" class="img-auto scale" /></figure>
+              <img loading="lazy" src="/q/upload/other/20240626/1719389747296309.webp" alt="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world." class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.<sup> </sup></strong>
+        <strong class="weight-small">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</strong>
         <p class="size-small"></p>
-        </a>
+      </a>
+	 
     </div>
     <div class="big-x8">
+	<h3 class="margin-bottom weight" align="center">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.<sup class="badge">$:{content:ext_price}</sup></h3>
         <time>2018-04-12</time>
+		<p>Number: A14</p> 
+		<p><a class="padding block" href="{content:ext_paypal}" target="_blank"> <img src="/q/py.webp" alt="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world." /> Buy Now <span class="text-danger">&#36;</span>:{content:ext_price}</sup></a></p>
   <p>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</p>
-
   </div> 
   </div>
-  
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
@@ -73,8 +85,15 @@
 <p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
 <p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 </div>
+    <div class="grid-middle">
+      <div class="grid">
+        
+      </div>
+    </div>
+  
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
+<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
 </div>
 </body>
 </html>
