--- a/q/4.html
+++ b/q/4.html
@@ -74,7 +74,8 @@
 <p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
+<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
 </div>
 </body>
 </html>
