--- a/q/crafts/index.html
+++ b/q/crafts/index.html
@@ -40,7 +40,7 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">10</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">11</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
@@ -57,7 +57,8 @@
 </div>
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
+<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
 </div>
 </body>
 </html>
