--- a/q/gbook/index.html
+++ b/q/gbook/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
-<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-06-28">
+<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-07-01">
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
 <script src="/q/j.min.js"></script>
@@ -41,7 +41,7 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">10</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">11</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
@@ -66,7 +66,8 @@
 </div>
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
+<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
 </div>
 </body>
 </html>
