--- a/q/sewing/index.html
+++ b/q/sewing/index.html
@@ -40,13 +40,29 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">10</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">11</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Sewing Products</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719794556332881.webp"  alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Embroidered lace cover, floral cloth patch, large peony embr··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719794420979065.webp"  alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Embroidered water-soluble lace fabric, hand sewn cheongsam, ··· <br />Read More</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719391194190860.webp"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" class="img-auto scale" /> </figure>
@@ -57,7 +73,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719391022657043.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800457809732.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
@@ -65,7 +81,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719390770601289.webp"  alt="Embroidery flower bud lace flower applique" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719760090198490.webp"  alt="Embroidery flower bud lace flower applique" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:13.99</strong>
@@ -73,7 +89,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719389747296309.webp"  alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800847146446.webp"  alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
@@ -81,7 +97,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719390299785042.webp"  alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800738209747.webp"  alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
@@ -89,31 +105,23 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719390626901068.webp"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800607934008.webp"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
         <p class="size-small flex-grow">Tiger head embroidery sticker  <br />Read More</p>
       </a>
-      <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2018-04-12 10:37:31">
+      <a class="big-x3 flex flex-column" href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240628/1719576394952389.webp"  alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800181983602.webp"  alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="size-small flex-grow">Embroidered lace cover, floral cloth patch, large peony embr··· <br />Read More</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2018-04-12 10:34:24">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240628/1719576419722657.webp"  alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="size-small flex-grow">Embroidered water-soluble lace fabric, hand sewn cheongsam, ··· <br />Read More</p>
+        <p class="size-small flex-grow">Embroidered fabric featuring a peony-colored floral pattern,··· <br />Read More</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240628/1719576587845466.webp"  alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719759794881169.webp"  alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
@@ -121,7 +129,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240628/1719576827388624.webp"  alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719759342917874.webp"  alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
@@ -137,7 +145,8 @@
 </div>
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
+<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
 </div>
 </body>
 </html>
