--- a/q/video/index.html
+++ b/q/video/index.html
@@ -38,41 +38,35 @@
   })
 </script>
 <br />
-
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h1 class="margin-bottom-mini weight" align="center">Video</h1>
-  <p align="center"></p>
+    <div class="grid">
+       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">11</span></a></div> 
+    </div>
+</div>
+<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
+  <h3 class="margin-bottom-mini weight" align="center">Video</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
-
     <div class="big-x12 grid discovers">
       <a class="big-x3 flex flex-column" href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719389747296309.webp"  alt="Chinese traditional embroide···" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719389747296309.webp"  alt="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world." class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Chinese traditional embroide···<sup>+</sup></strong>
-        <p class="flex-grow">Chinese traditional embroidery craft, arts and culture in a unique···<time>2018-04-12</time></p>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:[list:ext_price]</strong>
+        <p class="size-small flex-grow">Chinese traditional embroidery craft, arts and culture in a ··· <br />Read More</p>
       </a>
     </div>
   </div>
-</div>
-
-<div class="layout grid-large isplit scrollto">
-  <div class="grid documents">
-    <a class="big-x4" href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28">
-      <strong>Chinese traditional embroidery craft, arts and culture in a unique ancie···<sup>2018-04-12</sup></strong>
-    </a>
-  </div>
-</div>
-
     <ul class="nav nav-page nav-divider">
-      <li><a href="javascript:;">Previous page</a></li>
-      <li><a href="javascript:;">Next page</a></li>
+      <li><a href="javascript:;">Previous</a></li>
+      <li><a href="javascript:;">Next</a></li>
     </ul>
   
+</div>
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
+<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
 </div>
 </body>
 </html>
